<resources>
    <string name="app_name">Minerva Zoo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noticias">Noticias</string>
    <string name="galeria">Galeria</string>
    <string name="galeria_3d">Galeria 3D</string>
    <string name="videos">Videos</string>
    <string name="proyectos">Proyectos</string>
    <string name="ayudanos">Ayudanos</string>
    <string name="tour">Tour</string>
    <string name="contactenos">Contactenos</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="acerca_de">Acerca de</string>
    <string name="noticias_zoologico">El parque Zoológico Municipal Minerva pertenece a la municipalidad de Quetzaltenango. Tiene por objeto presentar al visitante una muestra de la fauna regional para conocerla, apreciarla y protegerla. Desde hace varios años funciona también como un centro de rescate animal creando nuevos albergues, reformando sus estructuras para crear recintos mas adecuados.</string>
    <string name="horarios">Horarios</string>
    <string name="martes_domingo">Martes a domingo</string>
    <string name="nuevo_a_cuatro">9:00 a.m. a 4:00 p.m.</string>
    <string name="pagina_oficial"> Visita nuestra página oficial </string>
    <string name="zoologico_minerva">Zoológico Minerva</string>
    <string name="nombre_transicion_imagen">imagen_compartida</string>
    <string name="bienvenido">Bienvenido</string>


    --Contactenos
    <string name="Telefono">(502) 2220 0022 Telefono</string>
    <string name="Email">minervazoo@yahoo.com Email</string>
    <string name="Direccion">Avenida las americas 0-50 zona 3 Quetzaltenango, Guatemala, C.A</string>
    <string name="Facebook">Zoologico Minerva, Quetzaltenango</string>
    <string name="Twitter">Zoologico Minerva, Quetzaltenango</string>
    <string name="Google_Plus">Zoologico Minerva, Quetzaltenango</string>
    <string name="YouTube">Zoologico Minerva</string>
    <string name="gusta_leer">Gusta_Leer</string>
    <string name="gusta_hacer">Gusta_Hacer</string>
    <string name="nombre_persona">Nombre_Persona</string>
    <string name="intro">Intro</string>
    <string name="direccion_correo">Direccion_Correo</string>
    <string name="envia_correo">Enviar_Correo</string>
    <string name="tvmensaje">tv_mennsaj</string>
    <string name="enviar_correo">ennviar_correo</string>
</resources>
