<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="52dp"
    android:orientation="vertical"
    tools:context="gt.edu.intecap.minervazoo.myapplication.vista.Contacto"
    android:background="@color/colorVerde">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Llamar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/call"
                android:onClick="onClickLlamada"
                android:text="@string/Telefono"
                android:textSize="22dp" />



            <TextView
                android:id="@+id/Faceboock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/face"
                android:onClick="onClickFacebook"
                android:text="@string/Facebook"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/Twiiter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/twitter"
                android:onClick="onClickTwiiter"
                android:text="@string/Twitter"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/Google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/google"
                android:onClick="onClickGoogle"
                android:text="@string/Google_Plus"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/Youtube"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/youtube"
                android:onClick="onClickYoutube"
                android:text="@string/YouTube"
                android:textSize="20dp" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
